--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>
-        body {
-            height: 100vh;
-            width: 100vw;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <title>My Website</title>
-  </head>
-    <body>
-        <iframe style="background: #FFFFFF;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true"></iframe>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+  <title>Electrical Engineering Insights</title>
+</head>
+<body>
+  <nav class="container-fluid">
+    <ul>
+      <li><strong>EE Insights</strong></li>
+    </ul>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#" role="button">Contact Us</a></li>
+    </ul>
+  </nav>
+  <main class="container">
+    <div class="grid">
+      <section>
+        <hgroup>
+          <h2>Interactive Data Visualization</h2>
+          <h3>Explore Our Electrical Engineering Projects</h3>
+        </hgroup>
+        <p>Gain insights into our latest engineering feats and research through interactive data visualization.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:1000px; height:600px; max-width:1000px; max-height:6000px;" frameborder="0">
+          </iframe>
+          <figcaption>Real-time Project Data Analytics</figcaption>
+        </figure>
+      </section>
+    </div>
+  </main>
+  <footer class="container">
+    <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
+  </footer>
+</body>
 </html>
