--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-  <title>Electrical Engineering Insights</title>
+  <title>EDL Project - TUE01</title>
 </head>
 <body>
   <nav class="container-fluid">
     <ul>
-      <li><strong>EE Insights</strong></li>
+      <li><strong>EDL Project - TUE01</strong></li>
     </ul>
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#" role="button">Contact Us</a></li>
+      <li><a href="#">Project Documentation</a></li>
+      <!--li><a href="#" role="button">Contact Us</a></li-->
     </ul>
   </nav>
   <main class="container">
     <div class="grid">
       <section>
         <hgroup>
-          <h2>Interactive Data Visualization</h2>
-          <h3>Explore Our Electrical Engineering Projects</h3>
+          <h2>Dynamic BME280 & ADE9000 Data Exploration: Interactive Visualizations</h2>
+          <h3></h3>
         </hgroup>
-        <p>Gain insights into our latest engineering feats and research through interactive data visualization.</p>
+        <p>Readings from last 24 hours</p>
         <figure>
           <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:1000px; height:600px; max-width:1000px; max-height:6000px;" frameborder="0">
           </iframe>
