--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
           <h2>Dynamic BME280 & ADE9000 Data Exploration: Interactive Visualizations</h2>
           <h3></h3>
         </hgroup>
-        <p>Readings from last 24 hours</p>
+        <p>Readings from the last 5 minutes.</p>
         <figure>
-          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:1000px; height:600px; max-width:1000px; max-height:6000px;" frameborder="0">
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:auto; max-width:1000px; max-height:600px;" frameborder="0">
           </iframe>
-          <figcaption>Real-time Project Data Analytics</figcaption>
+          <figcaption>BME280 - sensor data</figcaption>
+        </figure>
+        <!-- Additional MongoDB plot -->
+        <p>Readings from the last one hour.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=dark&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:auto; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>BME280 - sensor data</figcaption>
         </figure>
       </section>
     </div>
@@ -38,4 +45,6 @@
     <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
   </footer>
 </body>
+
+
 </html>
