--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </hgroup>
         <p>Readings from the last 5 minutes.</p>
         <figure>
-          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:100%; max-width:1000px; max-height:600px;" frameborder="0">
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
           </iframe>
           <figcaption>BME280 - sensor data</figcaption>
         </figure>
         <!-- Additional MongoDB plot -->
         <p>Readings from the last one hour.</p>
         <figure>
-          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:100%; max-width:1000px; max-height:600px;" frameborder="0">
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
           </iframe>
           <figcaption>BME280 - sensor data</figcaption>
         </figure>
