--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Project Documentation</a></li>
-      <!--li><a href="#" role="button">Contact Us</a></li-->
+      <li><a href="#" role="button">Contact Us</a></li>
     </ul>
   </nav>
   <main class="container">
@@ -31,7 +32,7 @@
           </iframe>
           <figcaption>BME280 - sensor data</figcaption>
         </figure>
-        <!-- Additional MongoDB plot -->
+        < Additional MongoDB plot >
         <p>Readings from the last one hour.</p>
         <figure>
           <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
@@ -45,6 +46,107 @@
     <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
   </footer>
 </body>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+  <title>EDL Project - TUE01</title>
+  <style>
+    iframe {
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      height: auto;
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      display: block;
+    }
+
+    body, html {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .main .container {
+      padding: 20px;
+    }
+
+    nav.container-fluid, footer.container {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <nav class="container-fluid">
+    <ul>
+      <li><strong>EDL Project - TUE01</strong></li>
+    </ul>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Project Documentation</a></li>
+      <!-- Removed "role=button" from the comment -->
+    </ul>
+  </nav>
+  <main class="container">
+    <div class="grid">
+      <section>
+        <hgroup>
+          <h2>Dynamic BME280 & ADE9000 Data Exploration: Interactive Visualizations</h2>
+          <h3>Updated Real-time Plot</h3>
+        </hgroup>
+        <p>Readings from the last 5 minutes.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>BME280 - sensor data</figcaption>
+        </figure>
+        <!-- Additional MongoDB plot -->
+        <p>Readings from the last one hour.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>BME280 - sensor data</figcaption>
+        </figure>
+        <!-- Real-time plot from local server -->
+        <p>Real-time plot from local measurements.</p>
+        <figure>
+          <img src="http://localhost:8000/plot_realtime.png" alt="Real-time Plot">
+          <figcaption>Last updated: <span id="lastUpdated"></span></figcaption>
+        </figure>
+      </section>
+    </div>
+  </main>
+  <footer class="container">
+    <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
+  </footer>
+  <script>
+    document.getElementById('lastUpdated').textContent = new Date().toLocaleTimeString();
+    setInterval(() => {
+      const imageElement = document.querySelector('img');
+      const src = imageElement.src;
+      imageElement.src = src.split('?')[0] + '?' + new Date().getTime();
+    }, 5000); // Update the image source every 5 seconds to avoid cache issues
+  </script>
+</body>
+</html>
 
 
 </html>
