--- a/index.html
+++ b/index.html
@@ -25,22 +25,41 @@
           <h2>Dynamic BME280 & ADE9000 Data Exploration: Interactive Visualizations</h2>
           <h3></h3>
         </hgroup>
-        <p>Readings from the last 5 minutes.</p>
+        <p>Temperature readings from last 10 minutes.</p>
         <figure>
           <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
           </iframe>
           <figcaption>BME280 - sensor data</figcaption>
         </figure>
         <!-- Additional MongoDB plot -->
-        <p>Readings from the last one hour.</p>
+        <p>Relative Humidity readings from last 10 minutes.</p>
         <figure>
           <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
           </iframe>
           <figcaption>BME280 - sensor data</figcaption>
         </figure>
+        <p>RMS Voltage readings from last 10 minutes.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=6616e81c-a19d-42a4-8a05-bc08479ff225&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>ADE9000 - sensor data</figcaption>
+        </figure>
+        <p>RMS Current readings from last 10 minutes.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>ADE9000 - sensor data</figcaption>
+        </figure>
+        </figure>
+        <p>Power readings from last 10 minutes.</p>
+        <figure>
+          <iframe src="https://charts.mongodb.com/charts-project-0-ufwkc/embed/charts?id=55e3d633-7afd-484d-9c7b-dd07930116c6&maxDataAge=60&theme=light&autoRefresh=true" title="MongoDB Chart" style="width:100%; height:600px; max-width:1000px; max-height:600px;" frameborder="0">
+          </iframe>
+          <figcaption>ADE9000 - sensor data</figcaption>
+        </figure>
         </figure>
         <!-- Real-time plot from local server -->
-        <p>Real-time plot from local measurements.</p>
+        <p>Real-time plot of Voltage values and it's Periodogram.</p>
         <figure>
           <img src="http://localhost:8000/plot_realtime.png" alt="Real-time Plot">
           <figcaption>Last updated: <span id="lastUpdated"></span></figcaption>
