--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <!-- Real-time plot from local server -->
         <p>Real-time plot of Voltage values and it's Periodogram.</p>
         <figure>
-          <img src="http://localhost:8000/plot_realtime.png" alt="Real-time Plot">
+          <img src="[GITHUB_RAW_IMAGE_URL]" alt="Real-time Plot"> 
           <figcaption>Last updated: <span id="lastUpdated"></span></figcaption>
         </figure>
       </section>
     </div>
   </main>
   <footer class="container">
-    <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
+    <small><a href="#">Shlesh Gholap</a> • <a href="#">Abhiruchi Kotamkar</a> • <a href="#">Shobhit Maheshwari</a> • <a href="#">Shiv Bharuka</a></small>
   </footer>
   <script>
     document.getElementById('lastUpdated').textContent = new Date().toLocaleTimeString();
