--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Real-time plot from local server -->
         <p>Real-time plot of Voltage values and it's Periodogram.</p>
         <figure>
-          <img src="https://github.com/Ru0110/EE344/blob/main/Test/Waveform_plot.png" alt="Real-time Plot"> 
+          <img src="Waveform_plot.png" alt="Real-time Plot"> 
           <figcaption>Last updated: <span id="lastUpdated"></span></figcaption>
         </figure>
       </section>
